--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ add_subdirectory(GeosUtil)
 add_subdirectory(NcdfUtil)
 add_subdirectory(History)
 add_subdirectory(ObsPack)
+add_subdirectory(ObsOperator)
 add_subdirectory(APM)
 add_subdirectory(GeosRad)
 add_subdirectory(GTMM)
